--- a/production/utils/helm/graphql/templates/graphql-ingress.yaml
+++ b/production/utils/helm/graphql/templates/graphql-ingress.yaml
@@ -12,10 +12,10 @@ spec:
         backend:
           serviceName: "{{ .Values.graphql.name }}"
           servicePort: {{ .Values.graphql.service.default.port }}
-  tls:
-  - hosts:
-    - {{ .Values.graphql.ingress.prefix }}.{{ .Release.Namespace }}.{{ .Values.global.ingress.wildcard }}
-    secretName: xip
+#  tls:
+#  - hosts:
+#    - {{ .Values.graphql.ingress.prefix }}.{{ .Release.Namespace }}.{{ .Values.global.ingress.wildcard }}
+#    secretName: xip
 
 # apiVersion: extensions/v1beta1
 # kind: Ingress
